<resources>
    <string name="app_name">My Bottles</string>
    <string name="menu_action_add_bottle">Add</string>
    <string name="menu_action_import_bottles">Import bottles</string>
    <string name="menu_action_delete_bottle">Delete</string>
    <string name="menu_action_delete_all">Delete All</string>
    <string name="menu_action_edit_bottle">Edit</string>
    <string name="menu_action_statistics">Statistics</string>
    <string name="menu_action_about">About</string>
    <string name="title_activity_bottle_add">New Bottle</string>
    <string name="column_type">Type</string>
    <string name="search">Search</string>
    <string name="column_country">Country</string>
    <string name="column_manufacturer">Manufacturer</string>
    <string name="column_title">Title</string>
    <string name="column_volume">Volume</string>
    <string name="column_degree">Degree</string>
    <string name="column_package">Package</string>
    <string name="column_income_date">Income date</string>
    <string name="column_income_source">Income source</string>
    <string name="column_price">Price</string>
    <string name="column_price_currency">Price currency</string>
    <string name="column_comments">Comments</string>
    <string name="title_activity_bottle_details">Bottle Details</string>
    <string name="volume_measure_ml">ml</string>
    <string name="volume_measure_l">L</string>
    <string name="degree_measure_percent">°</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="statistics_total_bottles">Total Bottles</string>
    <string name="statistics_total_liters">Total Volume</string>
    <string name="statistics_average_degree">Average Degree</string>
    <string name="toast_bottle_inserted">Bottle was inserted</string>
    <string name="toast_bottle_updated">Bottle was updated</string>
    <string name="toast_import_complete">Imported %1$d new bottles</string>
    <string name="toast_bottle_deleted">Bottle was deleted</string>
    <string name="toast_all_bottles_deleted">All bottles were deleted</string>
    <string name="alert_delete">Are you sure you want to remove %1$s from collection?</string>
    <string name="alert_delete_all">Are you sure you want to remove ALL bottles from collection? \n\nTHIS CAN NOT BE UNDONE!</string>
    <string name="title_activity_bottle_edit">Edit Details</string>
    <string name="details_in_collection_since">In collection since</string>
    <string name="details_source">Source</string>
    <string name="details_bought_for">Bought for</string>
    <string name="title_activity_about">About</string>
    <string name="dialog_text_importing">Importing…</string>
</resources>
