<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_add_bottle" android:title="@string/menu_action_add_bottle"
        android:icon="@android:drawable/ic_menu_add" app:showAsAction="ifRoom"
        android:orderInCategory="100" />
    <item android:id="@+id/action_import_bottles" android:title="@string/menu_action_import_bottles"
        app:showAsAction="never"
        android:orderInCategory="200" />
    <item android:id="@+id/action_delete_all" android:title="@string/menu_action_delete_all"
        app:showAsAction="never"
        android:orderInCategory="300" />
    <item android:id="@+id/action_statistics" android:title="@string/menu_action_statistics"
        app:showAsAction="never"
        android:orderInCategory="400" />
    <item android:id="@+id/action_about" android:title="@string/menu_action_about"
        app:showAsAction="never"
        android:orderInCategory="500" />
</menu>
