<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="io.bzzzil.bottles.BottleAddActivityFragment">

    <RelativeLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_type"
            android:id="@+id/textView_column_type"
            android:labelFor="@+id/editType"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editType"
            android:nextFocusForward="@+id/editCountry"
            android:imeOptions="actionNext"
            android:layout_below="@+id/textView_column_type"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_country"
            android:id="@+id/textView_column_country"
            android:labelFor="@+id/editCountry"
            android:layout_below="@+id/editType"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editCountry"
            android:nextFocusForward="@+id/editManufacturer"
            android:imeOptions="actionNext"
            android:layout_below="@+id/textView_column_country"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_manufacturer"
            android:id="@+id/textView_column_manufacturer"
            android:labelFor="@+id/editManufacturer"
            android:layout_below="@+id/editCountry"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editManufacturer"
            android:nextFocusForward="@+id/editTitle"
            android:imeOptions="actionNext"
            android:layout_below="@+id/textView_column_manufacturer"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_title"
            android:id="@+id/textView_column_title"
            android:labelFor="@+id/editTitle"
            android:layout_below="@+id/editManufacturer"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTitle"
            android:nextFocusForward="@+id/editVolume"
            android:imeOptions="actionNext"
            android:layout_below="@+id/textView_column_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_volume"
            android:id="@+id/textView_column_volume"
            android:labelFor="@+id/editVolume"
            android:layout_below="@+id/editTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editVolume"
            android:nextFocusForward="@+id/editDegree"
            android:imeOptions="actionNext"
            android:layout_below="@+id/textView_column_volume"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="numberSigned" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_degree"
            android:id="@+id/textView_column_degree"
            android:labelFor="@+id/editDegree"
            android:layout_below="@+id/editVolume"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editDegree"
            android:layout_below="@+id/textView_column_degree"
            android:imeOptions="actionNext"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_package"
            android:id="@+id/textView_column_package"
            android:labelFor="@+id/editPackage"
            android:layout_below="@+id/editDegree"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editPackage"
            android:layout_below="@+id/textView_column_package"
            android:imeOptions="actionNext"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_income_date"
            android:id="@+id/textView_column_income_date"
            android:labelFor="@+id/editIncomeDate"
            android:layout_below="@+id/editPackage"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editIncomeDate"
            android:layout_below="@+id/textView_column_income_date"
            android:imeOptions="actionNext"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_income_source"
            android:id="@+id/textView_column_income_source"
            android:labelFor="@+id/editIncomeSource"
            android:layout_below="@+id/editIncomeDate"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editIncomeSource"
            android:layout_below="@+id/textView_column_income_source"
            android:imeOptions="actionNext"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_price"
            android:id="@+id/textView_column_price"
            android:labelFor="@+id/editPrice"
            android:layout_below="@+id/editIncomeSource"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editPrice"
            android:layout_below="@+id/textView_column_price"
            android:imeOptions="actionNext"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_price_currency"
            android:id="@+id/textView_column_price_currency"
            android:labelFor="@+id/editPriceCurrency"
            android:layout_below="@+id/editPrice"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editPriceCurrency"
            android:layout_below="@+id/textView_column_price_currency"
            android:imeOptions="actionNext"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_comments"
            android:id="@+id/textView_column_comments"
            android:labelFor="@+id/editComments"
            android:layout_below="@+id/editPriceCurrency"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editComments"
            android:layout_below="@+id/textView_column_comments"
            android:imeOptions="actionDone"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="text" />

    </RelativeLayout>

</ScrollView>
